# Sauron

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
docs/plans/: 2026-03-08-sauron-design.md  2026-03-08-sauron-implementation.md
menubar/: Package.swift
menubar/.build/: plugin-tools.yaml
menubar/.build/arm64-apple-macosx/release/: description.json
menubar/.build/arm64-apple-macosx/release/ModuleCache/2XJKC5SCEQS74/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DataDetection-R5W4QHNMPWVH.pcm  DeveloperToolsSupport-3SUCMSK9ZS2JA.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOSurface-26455DPS9NDS0.pcm  (+41 more)
menubar/.build/arm64-apple-macosx/release/Modules/: SauronMenu.swiftdoc  SauronMenu.swiftmodule  SauronMenu.swiftsourceinfo
menubar/.build/arm64-apple-macosx/release/SauronMenu.build/: SauronMenu.d  output-file-map.json  sources
menubar/.build/arm64-apple-macosx/release/SauronMenu.product/: Objects.LinkFileList
menubar/SauronMenu.app/Contents/: Info.plist
menubar/SauronMenu.app/Contents/MacOS/: SauronMenu
menubar/Sources/SauronMenu/: SauronMenuApp.swift  StatusChecker.swift
src/: capture.rs  cli.rs  config.rs  daemon.rs  db.rs  email.rs  error.rs  launchd.rs  main.rs  processor.rs  summarizer.rs
(+3 files in other folders)
